# bhhh

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  codecov.yml  environment.yml  pyproject.toml  setup.cfg  tox.ini
.envs/: testenv-ruspy.yml  testenv.yml
.github/workflows/: main.yml
src/: bhhh.py  test_logit.py
src/bhhh/: config.py  minimize.py  optimize.py
tests/: test_logit.py  test_ruspy.py
